# tap-criteo

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml  tap-criteo.sh
.github/: dependabot.yml
.github/workflows/: constraints.txt  superlinter.yml  test.yml
tap_criteo/: auth.py  client.py  tap.py
tap_criteo/schemas/v2026.01/: ad.json  ad_set.json  advertiser.json  audience.json  campaign.json  creative.json
tap_criteo/streams/: reports.py  v202104.py  v202601.py
tests/: conftest.py  test_core.py
