[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tap-criteo"
version = "0.0.1"
description = "`tap-criteo` is a Singer tap for Criteo, built with the Meltano SDK for Singer Taps."
authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
maintainers = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/reservoir-data/tap-criteo"
repository = "https://github.com/reservoir-data/tap-criteo"
documentation = "https://github.com/reservoir-data/tap-criteo/#readme"
keywords = [
  "ELT",
  "singer.io",
  "Criteo",
]

[tool.poetry.dependencies]
python = ">=3.10"
singer-sdk = "==0.53.5"
python-dateutil = "==2.9.0.post0"
typing-extensions = {version = ">=4.15.0", python = "<3.12"}

[tool.poetry.group.dev.dependencies]
mypy = ">=1.19.1"
singer-sdk = { version = "0.53.5", extras = ["testing"] }
types-python-dateutil = "^2.9.0.20260124"

[tool.poetry.scripts]
tap-criteo = 'tap_criteo.tap:TapCriteo.cli'

[tool.ruff]
line-length = 88
required-version = ">=0.15"
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "FIX002",  # line-contains-todo
]
select = ["ALL"]
unfixable = [
  "ERA001",  # commented-out-code
]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN", "INP001"]
"tests/*" = [
  "ANN201",
  "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
