[build-system]
requires = [
  "hatchling>=1,<2",
  "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "tap-criteo"
dynamic = ["version"]
description = "`tap-criteo` is a Singer tap for Criteo, built with the Meltano SDK for Singer Taps."
authors = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
maintainers = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
keywords = [
    "ELT",
    "singer.io",
    "Criteo",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "singer-sdk==0.53.5",
    "python-dateutil==2.9.0.post0",
    "typing-extensions>=4.15.0 ; python_full_version < '3.12'",
]

[project.urls]
Homepage = "https://github.com/reservoir-data/tap-criteo"
Repository = "https://github.com/reservoir-data/tap-criteo"
Documentation = "https://github.com/reservoir-data/tap-criteo/#readme"

[project.scripts]
tap-criteo = "tap_criteo.tap:TapCriteo.cli"

[dependency-groups]
dev = [
    { include-group = "testing" },
    { include-group = "typing" },
]
ci = [
    { include-group = "testing" },
    "pytest-github-actions-annotate-failures>=0.3",
]
testing = [
    "pytest>=9",
    "singer-sdk[testing]",
]
typing = [
    { include-group = "testing" },
    "mypy>=1.19.1",
    "types-python-dateutil>=2.9.0.20260124",
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 88
required-version = ">=0.15"
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "FIX002",  # line-contains-todo
]
select = ["ALL"]
unfixable = [
  "ERA001",  # commented-out-code
]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN", "INP001"]
"tests/*" = [
  "ANN201",
  "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
